# asfg

./: .gitignore  CLAUDE.md  README.md  auto-align.py  benchmark.py  georef.py  paths.py  process.py  process_d3c.py  pyproject.toml  requirements.txt  stitch_frames.py
align/: __init__.py  affine.py  anchors.py  block_processing.py  boundary.py  checkpoint.py  coarse.py  constants.py  diagnostics.py  errors.py  film_scratches.py  filtering.py  flow_refine.py  geo.py  global_localization.py  grid_optim.py  image.py  io.py  manifest.py  matching.py  memory_guard.py  metadata_priors.py  models.py  params.py  pipeline.py  profiler.py  qa.py  qa_runner.py  scale.py  semantic_masking.py  state.py  strip_processing.py  tin_filter.py  types.py  warp.py
data/: bahrain_anchor_gcps.json  bahrain_boundary.geojson  local_paths.yaml.example
declass/: __init__.py  camera.py  catalog.py  extract.py  georef.py  mosaic.py  orientation.py  reference.py  reseau.py  shell.py  stitch.py  usgs.py
docs/: kh_altitudes.md
preprocess/: __init__.py  asp.py  auto_anchors.py  camera_model.py  catalog.py  coarse_align_ncc_stack.py  dem.py  georef.py  kh_panoramic.py  mission_altitude.py  mosaic.py  orientation.py  reseau.py  stitch.py  usgs.py
scripts/: benchmark.py  build_esri_pan.py  clean_reference_scratches.py  compare.py  debug_orientation.py  fetch_esri_basemap.py  fetch_kh_tles.py  kh_altitude_report.py  paths_config.py  run_benchmark.py  run_multi_test.py  run_test.py  test_eloftr.py
tests/: README.md  conftest.py  helpers.py  test_alignment_piecewise.py  test_auto_anchors_gates.py  (+28 more)
(+120 files in other folders)
