[tool.poetry]
name = "declass-process"
version = "0.1.0"
description = "Declassified satellite image alignment tools"
authors = ["mish"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
numpy = "^2.4.2"
opencv-python = "^4.13.0.92"
rasterio = "^1.5.0"
scipy = "^1.17.0"
scikit-image = "^0.26.0"
pillow = "^12.1.1"
kornia = "^0.8.2"
torch = "^2.10.0"
torchvision = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
